--- a/package.json
+++ b/package.json
@@ -4,16 +4,72 @@
   "description": " Game Sales Analytics Gateway Service",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint --ext .ts .",
+    "test": "ava --verbose --fail-fast",
+    "dev": "nodemon --config nodemon.json",
+    "build": "npm-run-all --sequential clean transpile copy-package-json",
+    "clean": "rimraf build",
+    "transpile": "tsc --project tsconfig.build.json",
+    "copy-package-json": "cpy package.json pnpm-lock.yaml build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/game-sales-analytics/gateway.git"
+  },
+  "ava": {
+    "extensions": [
+      "ts"
+    ],
+    "require": [
+      "ts-node/register"
+    ]
+  },
+  "engines": {
+    "node": "~17"
   },
   "author": "xeptore < hello [ at ] xeptore [ dot ] me >",
   "license": "SEE LICENSE IN license.txt",
   "bugs": {
     "url": "https://github.com/game-sales-analytics/gateway/issues"
   },
-  "homepage": "https://github.com/game-sales-analytics/gateway#readme"
+  "homepage": "https://github.com/game-sales-analytics/gateway#readme",
+  "devDependencies": {
+    "@changesets/cli": "^2.18.0",
+    "@tsconfig/node16": "^1.0.2",
+    "@types/is-number": "^7.0.1",
+    "@types/node": "^16.11.8",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "ava": "^3.15.0",
+    "chalk": "^4.1.2",
+    "cpy-cli": "^3.1.1",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-config-xo": "^0.39.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-array-func": "^3.1.7",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-optimize-regex": "^1.2.1",
+    "eslint-plugin-regexp": "^1.5.0",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-unicorn": "^38.0.1",
+    "node-notifier": "^10.0.0",
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5",
+    "pino-pretty": "^7.2.0",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.4.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "fastify": "^3.24.0",
+    "http-status-codes": "^2.1.4",
+    "is-number": "^7.0.0",
+    "nanoid": "^3.1.30",
+    "pino": "^7.3.0"
+  }
 }
