--- a/package.json
+++ b/package.json
@@ -7,10 +7,18 @@
     "lint": "eslint --ext .ts .",
     "test": "ava --verbose --fail-fast",
     "dev": "nodemon --config nodemon.json",
-    "build": "npm-run-all --sequential clean transpile copy-package-json",
+    "build": "npm-run-all --silent --sequential clean transpile copy-manifests",
     "clean": "rimraf build",
     "transpile": "tsc --project tsconfig.build.json",
-    "copy-package-json": "cpy package.json pnpm-lock.yaml build"
+    "copy-manifests": "cpy package.json pnpm-lock.yaml build",
+    "genprotos": "npm-run-all --sequential --silent protos:clean protos:mkdirp protos:gen",
+    "protos:clean": "rimraf proto-gen",
+    "protos:mkdirp": "mkdirp proto-gen",
+    "protos:gen": "npm-run-all --sequential protos:gen:js protos:gen:dts",
+    "protos:gen:js": "grpc_tools_node_protoc -I=protos/ protos/*.proto --js_out=import_style=commonjs,binary:./proto-gen --grpc_out=grpc_js:./proto-gen --plugin=protoc-gen-grpc=$(which grpc_tools_node_protoc_plugin)",
+    "protos:gen:dts": "protoc -I=protos protos/*.proto --plugin=protoc-gen-ts=$(which protoc-gen-ts) --ts_out=grpc_js:./proto-gen",
+    "syncprotos": "npm-run-all --sequential --silent protos:sync:userssrv",
+    "protos:sync:userssrv": "curl https://raw.githubusercontent.com/game-sales-analytics/userssrv/main/api/userssrv.proto -o protos/userssrv.proto"
   },
   "repository": {
     "type": "git",
@@ -35,6 +43,7 @@
   "homepage": "https://github.com/game-sales-analytics/gateway#readme",
   "devDependencies": {
     "@changesets/cli": "^2.18.0",
+    "@grpc/grpc-js": "^1.4.4",
     "@tsconfig/node16": "^1.0.2",
     "@types/is-number": "^7.0.1",
     "@types/node": "^16.11.8",
@@ -56,7 +65,10 @@
     "eslint-plugin-regexp": "^1.5.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-unicorn": "^38.0.1",
-    "node-notifier": "^10.0.0",
+    "google-protobuf": "^3.19.1",
+    "grpc-tools": "^1.11.2",
+    "grpc_tools_node_protoc_ts": "^5.3.2",
+    "mkdirp": "^1.0.4",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^7.2.0",
