--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   "homepage": "https://github.com/game-sales-analytics/gateway#readme",
   "devDependencies": {
     "@changesets/cli": "^2.18.0",
-    "@grpc/grpc-js": "^1.4.4",
     "@tsconfig/node16": "^1.0.2",
     "@types/is-number": "^7.0.1",
+    "@types/lodash.isnil": "^4.0.6",
     "@types/node": "^16.11.9",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -54,7 +54,6 @@
     "cpy-cli": "^3.1.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-standard": "^16.0.3",
     "eslint-config-xo": "^0.39.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-array-func": "^3.1.7",
@@ -78,9 +77,12 @@
     "typescript": "^4.5.2"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.4.4",
     "fastify": "^3.24.0",
     "http-status-codes": "^2.1.4",
     "is-number": "^7.0.0",
+    "joi": "^17.4.2",
+    "lodash.isnil": "^4.0.0",
     "nanoid": "^3.1.30",
     "pino": "^7.3.0"
   }
