ci: add pm2 to manage production docker image process

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -406,7 +406,7 @@ rules:
     - off
   filenames/match-regex:
     - error
-    - "^global\\.d$|^[a-z-]+$|\\.spec$"
+    - "^ecosystem\\.config$|^[a-z-]+$|^global\\.d$|^[a-z-]+$|\\.spec$"
     - true
   filenames/match-exported:
     - error
