ci: run scheduled job hourly

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,7 +1,7 @@
 name: Build And Publish Docker Image
 on:
   schedule:
-    - cron: "26 * * * *"
+    - cron: "26 18 * * *"
   push:
     branches:
       - main
